Admin accueil modifié

--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -133,70 +133,113 @@
             <div class="flex">
                 <div class="hover" id="carteSection1">
                     <div class="card2">
-                        <p id="description1" class="description"></p><img id="L1" class="left"> <img id="R1" class="right"> <img id="M1" class="middle"></div>
+                        <p id="description1" class="description"></p>
+                        <img id="L1" class="left">
+                        <img id="R1" class="right">
+                        <img id="M1" class="middle">
+                    </div>
                 </div>
                 <div class="hover" id="carteSection2">
                     <div class="card2">
-                        <p id="description2" class="description"></p><img id="L2" class="left"><img id="R2" class="right"> <img id="M2" class="middle"></div>
+                        <p id="description2" class="description"></p>
+                        <img id="L2" class="left">
+                        <img id="R2" class="right">
+                        <img id="M2" class="middle">
+                    </div>
                 </div>
                 <div class="hover" id="carteSection3">
                     <div class="card2">
-                        <p class="description">Valorisation énergétique </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle"
-                            alt="photo des services"></div>
+                        <p id="description3" class="description"></p>
+                        <img id="L3" class="left" alt="photo des services">
+                        <img id="R3" class="right" alt="photo des services">
+                        <img  id="M3" class="middle" alt="photo des services">
+                    </div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover" id="carteSection4">
                     <div class="card2">
-                        <p id="description3" class="description"></p><img id="L3" class="left"> <img id="R3" class="right"> <img id="M3" class="middle"></div>
+                        <p id="description4" class="description"></p>
+                        <img id="L4" class="left">
+                        <img id="R4" class="right">
+                        <img id="M4" class="middle">
+                    </div>
                 </div>
                 <div class="hover" id="carteSection5">
                     <div class="card2">
-                        <p id="description4" class="description"></p><img id="L4" class="left"> <img id="R4" class="right"> <img id="M4" class="middle"></div>
+                        <p id="description5" class="description"></p>
+                        <img id="L5" class="left">
+                        <img id="R5" class="right">
+                        <img id="M5" class="middle">
+                    </div>
                 </div>
             </div>
             <h3>Nos produits :</h3>
             <div class="flex">
                 <div class="hover" id="carteProduit1">
                     <div class="card2">
-                        <p class="description">Tour de lavage</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                        <p id="descriptionP1" class="description">Tour de lavage</p>
+                        <img id="LP1" src="/img/Capture2910-3.png" class="left" alt="photo des services">
+                        <img id="RP1" src="/img/Plaquette_05.jpg" class="right" alt="photo des services">
+                        <img id="MP1" src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
                     </div>
                 </div>
                 <div class="hover" id="carteProduit2">
                     <div class="card2">
-                        <p class="description">Venturi </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                        <p id="descriptionP2" class="description">Venturi</p>
+                        <img id="LP2" src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services">
+                        <img id="RP2" src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services">
+                        <img id="MP2" src="/img/venturi.png" class="middle" alt="photo des services">
+                    </div>
                 </div>
                 <div class="hover" id="carteProduit3">
                     <div class="card2">
-                        <p class="description">Electrofiltres humides et sec</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle"
-                            alt="photo des services"></div>
+                        <p id="descriptionP3" class="description">Electrofiltres humides et sec</p>
+                        <img id="LP3" src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services">
+                        <img id="RP3" src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services">
+                        <img id="MP3" src="/img/Norme.png" class="middle" alt="photo des services"></div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover" id="carteProduit4">
                     <div class="card2">
-                        <p class="description">Filtres à manches</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                        <p id="descriptionP4" class="description">Filtres à manches</p>
+                        <img id="LP4" src="/img/Capture2910-3.png" class="left" alt="photo des services">
+                        <img id="RP4" src="/img/Plaquette_05.jpg" class="right" alt="photo des services">
+                        <img id="MP4" src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
                     </div>
                 </div>
                 <div class="hover" id="carteProduit5">
                     <div class="card2">
-                        <p class="description">EDIP </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                        <p id="descriptionP5" class="description">EDIP </p>
+                        <img id="LP5" src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services">
+                        <img id="RP5" src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services">
+                        <img id="MP5" src="/img/venturi.png" class="middle" alt="photo des services">
+                    </div>
                 </div>
                 <div class="hover" id="carteProduit6">
                     <div class="card2">
-                        <p class="description">installation "clé en main"</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle"
-                            alt="photo des services"></div>
+                        <p id="descriptionP6" class="description">installation "clé en main"</p>
+                        <img id="LP6" src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services">
+                        <img id="RP6" src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services">
+                        <img id="MP6" src="/img/Norme.png" class="middle" alt="photo des services"></div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover" id="carteProduit7">
                     <div class="card2">
-                        <p class="description">Récupération d'énergie</p><img src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> <img src="/img/Capture2910-3.png" class="right" alt="photo des services"> <img src="/img/Capture2701-3d.png" class="middle"
-                            alt="photo des services"></div>
+                        <p id="descriptionP7" class="description">Récupération d'énergie</p>
+                        <img id="LP7" src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> 
+                        <img id="RP7" src="/img/Capture2910-3.png" class="right" alt="photo des services">
+                        <img id="MP7" src="/img/Capture2701-3d.png" class="middle" alt="photo des services"></div>
                 </div>
                 <div class="hover" id="carteProduit8">
                     <div class="card2">
-                        <p class="description">Fourniture de pièce de rechange</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services">                        <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle" alt="photo des services"></div>
+                        <p id="descriptionP8" class="description">Fourniture de pièce de rechange</p>
+                        <img id="LP8" src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services">
+                        <img id="RP8" src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services">
+                        <img id="MP8" src="/img/Capture2701-3d.png" class="middle" alt="photo des services">
+                    </div>
                 </div>
             </div>
 
