--- a/servithenFR/htmlFR/modifaccueilFR.html
+++ b/servithenFR/htmlFR/modifaccueilFR.html
@@ -158,6 +158,82 @@
                     </div></div>
                 </div>
             </div>
+            <div class="flex">
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="description5" id="description5" class="descriptionmodif"></textarea>
+                        <textarea name="left5" id="left5" class="modifleft"></textarea> 
+                        <textarea name="right5" id="right5" class="modifright"></textarea> 
+                        <textarea name="middle5" id="middle5" class="modifmiddle"></textarea>
+                </div></div>
+            </div>
+            <h3>Nos produits :</h3>
+            <div class="flex">
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP1" id="descriptionP1" class="descriptionmodif"></textarea>
+                        <textarea name="leftP1" id="leftP1" class="modifleft"></textarea> 
+                        <textarea name="rightP1" id="rightP1" class="modifright"></textarea> 
+                        <textarea name="middleP1" id="middleP1" class="modifmiddle"></textarea>
+                </div></div>
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP2" id="description1" class="descriptionmodif"></textarea>
+                        <textarea name="leftP2" id="leftP2" class="modifleft"></textarea> 
+                        <textarea name="rightP2" id="rightP2" class="modifright"></textarea> 
+                        <textarea name="middleP2" id="middleP2" class="modifmiddle"></textarea>
+                </div></div>
+            </div>
+            <div class="flex">
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP3" id="descriptionP3" class="descriptionmodif"></textarea>
+                        <textarea name="leftP3" id="leftP3" class="modifleft"></textarea> 
+                        <textarea name="rightP3" id="rightP3" class="modifright"></textarea> 
+                        <textarea name="middleP3" id="middleP3" class="modifmiddle"></textarea>
+                    </div>
+                </div>
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP4" id="descriptionP4" class="descriptionmodif"></textarea>
+                        <textarea name="leftP4" id="leftP4" class="modifleft"></textarea> 
+                        <textarea name="rightP4" id="rightP4" class="modifright"></textarea> 
+                        <textarea name="middleP4" id="middleP4" class="modifmiddle"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP5" id="descriptionP5" class="descriptionmodif"></textarea>
+                        <textarea name="leftP5" id="leftP5" class="modifleft"></textarea> 
+                        <textarea name="rightP5" id="rightP5" class="modifright"></textarea> 
+                        <textarea name="middleP5" id="middleP5" class="modifmiddle"></textarea>
+                </div></div>
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP6" id="descriptionP6" class="descriptionmodif"></textarea>
+                        <textarea name="leftP6" id="leftP6" class="modifleft"></textarea> 
+                        <textarea name="rightP6" id="rightP6" class="modifright"></textarea> 
+                        <textarea name="middleP6" id="middleP6" class="modifmiddle"></textarea>
+                </div></div>
+            </div>
+            <div class="flex">
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP7" id="descriptionP7" class="descriptionmodif"></textarea>
+                        <textarea name="leftP7" id="leftP7" class="modifleft"></textarea> 
+                        <textarea name="rightP7" id="rightP7" class="modifright"></textarea> 
+                        <textarea name="middleP7" id="middleP7" class="modifmiddle"></textarea>
+                </div></div>
+                <div class="hover">
+                    <div class="card2">
+                        <textarea name="descriptionP8" id="descriptionP8" class="descriptionmodif"></textarea>
+                        <textarea name="leftP8" id="leftP8" class="modifleft"></textarea> 
+                        <textarea name="rightP8" id="rightP8" class="modifright"></textarea> 
+                        <textarea name="middleP8" id="middleP8" class="modifmiddle"></textarea>
+                </div></div>
+            </div>
         </div>
     </section>
 
@@ -180,8 +256,6 @@
                 <textarea id="NumbPart" name="NumbPart"></textarea>
             </div>
         </div>
-
-
 
         <div class="container">
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
