--- a/servithenEN/htmlEN/accueilEN.html
+++ b/servithenEN/htmlEN/accueilEN.html
@@ -122,7 +122,13 @@
             </div>
             <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
                 to your needs.</p>
-            <h4>Nos services :</h4>
+            <h3>Nos services :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <div class="hover" id="carteSection1">
                     <div class="card2">
@@ -149,7 +155,13 @@
                             class="middle" alt="photo des services"></div>
                 </div>
             </div>
-            <h4>Our products :</h4>
+            <h3>Our products :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <div class="hover" id="carteProduit1">
                     <div class="card2">
@@ -194,7 +206,13 @@
                 </div>
             </div>
 
-            <h4>industry 4.0 :</h4>
+            <h3>industry 4.0 :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <video width="500" height="320" controls>
                         <source src="/video/PrésentationMP.mp4" type="video/mp4">
