--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -13,6 +13,7 @@
     <script src="/servithenFR/jsFR/confianceFR.js"></script>
     <script src="/servithenFR/jsFR/login.js"></script>
 
+
 </head>
 
 <body>
@@ -133,7 +134,13 @@
             </div>
             <p class="textphoto">Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
                 de vie tout en s’adaptant à vos besoins.</p>
-            <h4>Nos services :</h4>
+            <h3>Nos services :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <div class="hover" id="carteSection1">
                     <div class="card2">
@@ -163,6 +170,12 @@
                 </div>
             </div>
             <h3>Nos produits :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <div class="hover" id="carteProduit1">
                     <div class="card2">
@@ -207,7 +220,13 @@
                 </div>
             </div>
 
-            <h4>industrie 4.0 :</h4>
+            <h3>industrie 4.0 :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="flex">
                 <video width="500" height="320" controls>
                         <source src="/video/PrésentationMP.mp4" type="video/mp4">
