--- a/servithenFR/htmlFR/notreEngagementFR.html
+++ b/servithenFR/htmlFR/notreEngagementFR.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script type="text/javascript" src="/servithenFR/jsFR/engagementFR.js"></script>
 
 </head>
 
@@ -25,9 +25,9 @@
 
             <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/notreEngagementFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenEN/htmlEN/notreEngagementEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
@@ -98,13 +98,11 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
-                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
+            <p id="txtTitre" class="pTitre">
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
-                Ingénierie, audit et assistance à la maitrise d'ouvrage.
+            <p id="stxtTitre" class="pTitre">
             </p>
         </div>
 
@@ -121,19 +119,10 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="presentation">La société Servithen (Services Thermique Environnement) a été créée en 1986. Principalement centrée à l'origine sur l'audit et la mise en conformité d'installations thermiques existantes elle a étendu ses prestations à l'installation de lignes
-                complètes d'incinération et de traitement de fumées ou d'effluents gazeux et à la fourniture d'équipements spécifiques, ou d'installations "clé-en-main", avec en particulier :
-            </p>
-            <p class="presentation"> · Des fours,<br><br> · Des laveurs de fumées pour l'abattement des poussières et la neutralisation des gaz acides,<br><br> · Des filtres électrostatiques humides permettant des rendements élevés de captation des poussières,<br><br> · Des unités
-                de traitement sec de fumées d'incinération,<br><br> · Des installations de traitement de composés organiques volatiles (COV), d'odeurs ou de traitement deNOx.
-            </p>
-            <p class="presentation"> La Société SERVITHEN s’est vu décerner le label Gazelle 2005 par le ministre des PME, du commerce, de l’artisanat et des professions libérales, Monsieur Renaud DUTREIL. Ce trophée récompense 2.000 Entreprises françaises sur 1,2 millions de
-                PME. Les gazelles retenues sont les PME qui croissent pendant la période étudiée de 1993 à 2003, soit deux ou trois plus vite que celles du même secteur d’activité, soit celles qui sont dans le top 5 où 10 % de leur population en termes
-                de croissance et qui, ont une rentabilité supérieure à celle de leurs homologues. L’objectif de ce programme gouvernemental est de favoriser le maintien de la croissance rapide de ces PME les plus dynamiques. Notamment, en mobilisant toutes
-                les compétences pour leurs permettre de soutenir leur croissance, en particulier en enrichissant leur réseau relationnel, et en leur donnant accès à des offres spécifiques de partenaires, entre autres financiers</p>
-
-            <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
-            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg" alt="photo prix gazette">
+            <p id="P1" class="presentation"></p>
+            <p id="P2" class="presentation"></p>
+            <p id="P3" class="presentation"><p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
+            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
         </div>
     </section>
 
@@ -150,37 +139,16 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png" alt="logo partenaire someflu"></div>
-            </div>
+            <section id="Partenaire" class="customer-logos2 slider2">
+            </section>
         </div>
 
 
 
         <div class="container">
-            <h3 class="text-center font-weight-bold">nous font confiance :</h3>
-            <div class="déco">
-                <div class="sphère"></div>
-                <div class="transmission"></div>
-                <div class="barre"></div>
-                <div class="sphère"></div>
-            </div>
-            <div class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png" alt="logo confiance orange"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png" alt="logo confiance veolia"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png" alt="logo confiance ocp"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png" alt="logo confiance orano"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg" alt="logo confiance sgd-pharma"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png" alt="logo confiance siaap"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png" alt="logo confiance suez"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png" alt="logo confiance valorhin"></div>
-            </div>
+            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <section id="Confiance" class="customer-logos slider">
+            </section>
         </div>
 
     </div>
@@ -191,29 +159,28 @@
             <h4>Coordonnées :</h4>
         </div>
 
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
-            <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
-            <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-            <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
-            <a class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <a id="Telephone"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <a id="Mail" class="footerp"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+                <a id="Linkedin" target="_blank" class="footerp"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <a id="Local" target="_blank"></a>
 
-        </div>
-
-    </footer>
+            </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 
 </html>
