--- a/test/en/ProduitEN/EquipementsDosageInjectionDePoudresEN.html
+++ b/test/en/ProduitEN/EquipementsDosageInjectionDePoudresEN.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/en/cssEN/index.css">
+    <link rel="stylesheet" href="/en/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="/en/jsEN/confianceEN.js"></script>
