--- a/test/en/ProduitEN/ElectrofiltresHumidesSecsEN.html
+++ b/test/en/ProduitEN/ElectrofiltresHumidesSecsEN.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="/en/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -25,7 +25,7 @@
             <div class="navbar">
 
 
-                <a href="/en/index.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/en/index.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
 
                 <a href="/fr/ProduitFR.html/ElectrofiltresHumidesSecsFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
