--- a/test/en/SolutionConnecteeGestionDistanceEN.html
+++ b/test/en/SolutionConnecteeGestionDistanceEN.html
@@ -24,7 +24,7 @@
         <div class="navbar">
 
 
-            <a href="/en/index.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/en/index.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
 
             <a href="/fr/SolutionConnecteeGestionDistanceFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
@@ -62,14 +62,14 @@
                 <button class="dropbtn">PRODUCTS
               </button>
                 <div class="dropdown-content3">
-                    <a href="/ProduitEN/ToursDeLavageEN.html">washing towers</a>
-                    <a href="/ProduitEN/VenturiEN.html">Venturi</a>
-                    <a href="/ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
-                    <a href="/ProduitEN/FiltresManchesEN.html">Bag filters</a>
-                    <a href="/ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
-                    <a href="/ProduitEN/InstallationsEN.html">“Turnkey” installations</a>
-                    <a href="/ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
-                    <a href="/ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                    <a href="ProduitEN/ToursDeLavageEN.html">washing towers</a>
+                    <a href="ProduitEN/VenturiEN.html">Venturi</a>
+                    <a href="ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
+                    <a href="ProduitEN/FiltresManchesEN.html">Bag filters</a>
+                    <a href="ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
+                    <a href="ProduitEN/InstallationsEN.html">“Turnkey” installations</a>
+                    <a href="ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
+                    <a href="ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
                 </div>
             </div>
 
