--- a/test/en/index.html
+++ b/test/en/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -22,7 +22,7 @@
 
         <div class="navbar">
 
-            <a href="/en/index.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/en/index.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
 
             <a href="/fr/index.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
@@ -60,14 +60,14 @@
                 <button class="dropbtn">PRODUCTS
               </button>
                 <div class="dropdown-content3">
-                    <a href="/ProduitEN/ToursDeLavageEN.html">washing towers</a>
-                    <a href="/ProduitEN/VenturiEN.html">Venturi</a>
-                    <a href="/ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
-                    <a href="/ProduitEN/FiltresManchesEN.html">Bag filters</a>
-                    <a href="/ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
-                    <a href="/ProduitEN/InstallationsEN.html">“Turnkey” installations</a>
-                    <a href="/ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
-                    <a href="/ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                    <a href="ProduitEN/ToursDeLavageEN.html">washing towers</a>
+                    <a href="ProduitEN/VenturiEN.html">Venturi</a>
+                    <a href="ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
+                    <a href="ProduitEN/FiltresManchesEN.html">Bag filters</a>
+                    <a href="ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
+                    <a href="ProduitEN/InstallationsEN.html">“Turnkey” installations</a>
+                    <a href="ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
+                    <a href="ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
                 </div>
             </div>
 
