--- a/test/en/pourquoiServithenEN.html
+++ b/test/en/pourquoiServithenEN.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.png " type="image/x-icon">
     <link rel="stylesheet" href="cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -23,7 +23,7 @@
         <div class="navbar">
 
 
-            <a href="/en/index.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+            <a href="/en/index.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
 
             <a href="/fr/pourquoiServithenFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
@@ -50,11 +50,11 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="serviceEN/service1.html">Installation Audits and Expertise</a>
-                    <a href="serviceEN/service2.html">Upgrading to regulatory standards </a>
-                    <a href="serviceEN/service3.html">Energy recovery</a>
-                    <a href="serviceEN/service4.html">Feasibility studies, pre-projects and detailed studies</a>
-                    <a href="serviceEN/service5.html">Preventive / curative maintenance</a>
+                    <a href="serviceEN/service1EN.html">Installation Audits and Expertise</a>
+                    <a href="serviceEN/service2EN.html">Upgrading to regulatory standards </a>
+                    <a href="serviceEN/service3EN.html">Energy recovery</a>
+                    <a href="serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
+                    <a href="serviceEN/service5EN.html">Preventive / curative maintenance</a>
                 </div>
             </div>
 
@@ -62,14 +62,14 @@
                 <button class="dropbtn">PRODUCTS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/ProduitEN/ToursDeLavageEN.html">washing towers</a>
-                    <a href="/ProduitEN/VenturiEN.html">Venturi</a>
-                    <a href="/ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet / dry electrofilters</a>
-                    <a href="/ProduitEN/FiltresManchesEN.html">Filtres à manches</a>
-                    <a href="/ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP : Powder Dosing and Injection Equipment</a>
-                    <a href="/ProduitEN/InstallationsEN.html">“ Turnkey ” installations</a>
-                    <a href="/ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
-                    <a href="/ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                    <a href="ProduitEN/ToursDeLavageEN.html">washing towers</a>
+                    <a href="ProduitEN/VenturiEN.html">Venturi</a>
+                    <a href="ProduitEN/ElectrofiltresHumidesSecsEN.html">Wet / dry electrofilters</a>
+                    <a href="ProduitEN/FiltresManchesEN.html">Filtres à manches</a>
+                    <a href="ProduitEN/EquipementsDosageInjectionDePoudresEN.html">EDIP : Powder Dosing and Injection Equipment</a>
+                    <a href="ProduitEN/InstallationsEN.html">“ Turnkey ” installations</a>
+                    <a href="ProduitEN/RecuperationEnergiEN.html">Energy recovery</a>
+                    <a href="ProduitEN/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
                 </div>
             </div>
 
