--- a/test/fr/serviceFR/modifservice5.html
+++ b/test/fr/serviceFR/modifservice5.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="/servithenFR/cssFR/service.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script  src="/test/fr/jsFR/modifservice1FR.js"></script>
@@ -187,29 +187,29 @@
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <textarea name="Telephone" class="footerp" id="Telephone"></textarea>
-                <textarea name="TelephoneURL" id="TelephoneURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/logoTelW.png">
+                <textarea id="Telephone" class="footerp"></textarea>
+                <textarea id="TelephoneURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <textarea name="Mail" class="footerp" id="Mail"></textarea>
-                <textarea name="MailURL" id="MailURL"></textarea>
-                </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <textarea name="Linkedin" id="Linkedin"></textarea>
-                <textarea name="LinkedinURL" id="LinkedinURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/logoMailW.png">
+                <textarea id="Mail" class="footerp"></textarea>
+                <textarea id="MailURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <textarea name="Local" id="Local"></textarea>
-                <textarea name="LocalURL" id="LocalURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/linkedinW.png">
+                <textarea id="Linkedin" target="_blank" class="footerp"></textarea>
+                <textarea id="LinkedinURL"></textarea>
             </div>
-            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/test/img/LogoFooter/logoPosW.png">
+                <textarea id="Local" target="_blank" class="footerp"></textarea>
+                <textarea id="LocalURL"></textarea>
+            </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/fr/MentionsLegales.html">Mentions légales</a> </p>
         </footer>
 </body>
 
