--- a/test/fr/ElectrofiltresHumidesSecsFR.html
+++ b/test/fr/ElectrofiltresHumidesSecsFR.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script type="text/javascript" src="/test/fr/jsFR/ElectroFR.js"></script>
@@ -54,11 +54,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/test/fr/service1.html">Audits et Expertises d’installations</a>
-                        <a href="/test/fr/test/fr/service2.html">Remise aux normes réglementaire </a>
-                        <a href="/test/fr/test/fr/service3.html">Valorisation énergétique</a>
-                        <a href="/test/fr/test/fr/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="/servithenFR/htmlFR/serviceFR/service5.html">Maintenance préventive / curative</a>
+                        <a href="/test/fr/test/fr/serviceFr/service1.html">Audits et Expertises d’installations</a>
+                        <a href="/test/fr/test/fr/serviceFr/service2.html">Remise aux normes réglementaire </a>
+                        <a href="/test/fr/test/fr/serviceFr/service3.html">Valorisation énergétique</a>
+                        <a href="/test/fr/test/fr/serviceFr/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                        <a href="/test/fr/test/fr/serviceFr/service4.html">Maintenance préventive / curative</a>
                     </div>
                 </div>
 
@@ -173,12 +173,12 @@
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone" class="footerp"></a>
+                <a id="Telephone"></a>
             </div>
             <br>
             <div class="foter">
@@ -193,12 +193,11 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank" class="footerp"></a>
+                <a id="Local" target="_blank"></a>
+
             </div>
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
-
-    </footer>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 
 </html>
