--- a/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
+++ b/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
@@ -199,34 +199,31 @@
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
-            <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
-            <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-            <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
-        </div>
-        <br>
-        <div class="foter">
-            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
-            <a class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <a id="Telephone"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <a id="Mail" class="footerp"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+                <a id="Linkedin" target="_blank" class="footerp"></a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <a id="Local" target="_blank"></a>
 
-        </div>
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/fr/MentionsLegales.html">Mentions légales</a> </p>
-
-    </footer>
+            </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 
 </html>
