--- a/test/fr/ProduitFR/InstallationsFR.html
+++ b/test/fr/ProduitFR/InstallationsFR.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script type="text/javascript" src="/test/fr/jsFR/InstallationsFR.js"></script>
@@ -26,14 +26,14 @@
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-                <a href="/servithenFR/htmlFR/ProduitFR.html/InstallationsFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
-
-                <a href="/servithenEN/htmlEN/ProduitEN.html/InstallationsEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
-
+                <a href="/test/fr/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
+    
+                <a href="/test/en/.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+    
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -41,51 +41,51 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
-                        <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                        <a href="/test/fr/appli.html">MyPartner</a>
+                        <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Link 3</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
                     <button class="dropbtn">SERVICES 
                   </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/serviceFR/service1.html">Audits et Expertises d’installations</a>
-                        <a href="/servithenFR/htmlFR/serviceFR/service2.html">Remise aux normes réglementaire </a>
-                        <a href="/servithenFR/htmlFR/serviceFR/service3.html">Valorisation énergétique</a>
-                        <a href="/servithenFR/htmlFR/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="/servithenFR/htmlFR/serviceFR/service5.html">Maintenance préventive / curative</a>
-                    </div>
+                  <div class="dropdown-content3">
+                    <a href="/test/fr/serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
+                    <a href="/test/fr/serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
+                    <a href="/test/fr/serviceFR/modifservice3.html">Valorisation énergétique</a>
+                    <a href="/test/fr/serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/test/fr/serviceFR/modifservice5.html">Maintenance préventive / curative</a>
+                </div>
                 </div>
 
                 <div class="dropdown">
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/test/fr/ProduitFR/modifToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/test/fr/ProduitFR/modifVenturiFR.html">Venturi</a>
+                        <a href="/test/fr/ProduitFR/modifElectroFR.html">Electrofiltres humides / secs</a>
+                        <a href="/test/fr/ProduitFR/modifFiltresFR.html">Filtres à manches</a>
+                        <a href="/test/fr/ProduitFR/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/test/fr/ProduitFR/modifInstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/test/fr/ProduitFR/modifRecuperationFR.html">Récupération d’énergie</a>
+                        <a href="/test/fr/ProduitFR/modifFournitureFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Notre métier</a>
-                        <a href="/servithenFR/htmlFR/pourquoiServithenFR.html">Pourquoi Servithen</a>
-                        <a href="/servithenFR/htmlFR/notreEngagementFR.html">Notre engagement</a>
-                    </div>
+                  <div class="dropdown-content3">
+                    <a href="/test/fr/modifpresentationFR.html">Notre métier</a>
+                    <a href="/test/fr/modifpourquoiFR.html">Pourquoi Servithen</a>
+                    <a href="/test/fr/modifengagementFR.html">Notre engagement</a>
+                </div>
                 </div>
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/test/fr/modifaccueilFR.html">ACCUEIL</a>
 
                 </div>
 
@@ -170,12 +170,12 @@
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone" class="footerp"></a>
+                <a id="Telephone"></a>
             </div>
             <br>
             <div class="foter">
@@ -190,12 +190,11 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank" class="footerp"></a>
+                <a id="Local" target="_blank"></a>
+
             </div>
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
-
-    </footer>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 
 </html>
