--- a/test/fr/ProduitFR/ToursDeLavageFR.html
+++ b/test/fr/ProduitFR/ToursDeLavageFR.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script type="text/javascript" src="/test/fr/jsFR/ToursDeLavageFR.js"></script>
@@ -170,12 +170,12 @@
     <footer class="coordonne">
 
         <div class="foters">
-            <h4>Contact information :</h4>
+            <h4>Coordonnées :</h4>
         </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone" class="footerp"></a>
+                <a id="Telephone"></a>
             </div>
             <br>
             <div class="foter">
@@ -190,12 +190,11 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank" class="footerp"></a>
+                <a id="Local" target="_blank"></a>
+
             </div>
-
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
-
-    </footer>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 
 </html>
