--- a/test/fr/accueilFR.html
+++ b/test/fr/accueilFR.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script type="text/javascript" src="/test/fr/jsFR/accueilFR.js"></script>
@@ -28,11 +28,11 @@
             <div class="navbar">
 
 
-                <a href="/test/fr/accueilFR.html"><img class="logo" src="/test/fr/img/logo.png " alt="logo Servithen"></a>
+                <a href="/test/fr/accueilFR.html"><img class="logo" src="/test/img/logo.png " alt="logo Servithen"></a>
 
-                <a href="/test/fr/accueilFR.html"><img class="langage" src="/test/fr/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+                <a href="/test/fr/accueilFR.html"><img class="langage" src="/test/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/test/fr/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+                <a href="/test/en/accueilEN.html"><img class="langage" src="/test/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
@@ -297,28 +297,26 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a id="Telephone"></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a id="Mail" class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                <a id="Mail" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a id="Linkedin" target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a id="Linkedin" target="_blank" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+                <a id="Local" target="_blank"></a>
 
-        </div>
-        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/test/fr/MentionsLegales.html">Mentions légales</a> </p>
-
-    </footer>
+            </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+        </footer>
 </body>
 <script src="/test/fr/jsFR/scriptFR.js"></script>
 
