--- a/test/fr/serviceFR/modifservice4.html
+++ b/test/fr/serviceFR/modifservice4.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="/servithenFR/cssFR/service.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/test/fr/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script  src="/test/fr/jsFR/modifservice1FR.js"></script>
@@ -30,14 +30,14 @@
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
                 <button>Confirmer les changements</button>
                 <textarea name="serv">4</textarea>
-                <a href="/servithenFR/htmlFR/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
+                <a href="/test/fr/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
     
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+                <a href="/test/en/.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
     
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/modifformFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -45,8 +45,8 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="modifappli.html">MyPartner</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                        <a href="/test/fr/appli.html">MyPartner</a>
+                        <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Link 3</a>
                     </div>
                 </div>
 
@@ -54,11 +54,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR//serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
-                    <a href="/servithenFR/htmlFR//serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
-                    <a href="/servithenFR/htmlFR//serviceFR/modifservice3.html">Valorisation énergétique</a>
-                    <a href="/servithenFR/htmlFR//serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="/servithenFR/htmlFR//serviceFR/modifservice5.html">Maintenance préventive / curative</a>
+                    <a href="/test/fr/serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
+                    <a href="/test/fr/serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
+                    <a href="/test/fr/serviceFR/modifservice3.html">Valorisation énergétique</a>
+                    <a href="/test/fr/serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/test/fr/serviceFR/modifservice5.html">Maintenance préventive / curative</a>
                 </div>
                 </div>
 
@@ -66,14 +66,14 @@
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifVenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifElectroFR.html">Electrofiltres humides / secs</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifFiltresFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifInstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifRecuperationFR.html">Récupération d’énergie</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/modifFournitureFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/test/fr/ProduitFR/modifToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/test/fr/ProduitFR/modifVenturiFR.html">Venturi</a>
+                        <a href="/test/fr/ProduitFR/modifElectroFR.html">Electrofiltres humides / secs</a>
+                        <a href="/test/fr/ProduitFR/modifFiltresFR.html">Filtres à manches</a>
+                        <a href="/test/fr/ProduitFR/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/test/fr/ProduitFR/modifInstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/test/fr/ProduitFR/modifRecuperationFR.html">Récupération d’énergie</a>
+                        <a href="/test/fr/ProduitFR/modifFournitureFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
@@ -81,15 +81,15 @@
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR/modifpresentationFR.html">Notre métier</a>
-                    <a href="/servithenFR/htmlFR/modifpourquoiFR.html">Pourquoi Servithen</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Notre engagement</a>
+                    <a href="/test/fr/modifpresentationFR.html">Notre métier</a>
+                    <a href="/test/fr/modifpourquoiFR.html">Pourquoi Servithen</a>
+                    <a href="/test/fr/modifengagementFR.html">Notre engagement</a>
                 </div>
                 </div>
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/modifaccueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/test/fr/modifaccueilFR.html">ACCUEIL</a>
 
                 </div>
 
@@ -187,29 +187,29 @@
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <textarea name="Telephone" class="footerp" id="Telephone"></textarea>
-                <textarea name="TelephoneURL" id="TelephoneURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/logoTelW.png">
+                <textarea id="Telephone" class="footerp"></textarea>
+                <textarea id="TelephoneURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <textarea name="Mail" class="footerp" id="Mail"></textarea>
-                <textarea name="MailURL" id="MailURL"></textarea>
-                </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <textarea name="Linkedin" id="Linkedin"></textarea>
-                <textarea name="LinkedinURL" id="LinkedinURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/logoMailW.png">
+                <textarea id="Mail" class="footerp"></textarea>
+                <textarea id="MailURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <textarea name="Local" id="Local"></textarea>
-                <textarea name="LocalURL" id="LocalURL"></textarea>
+                <img class="logoinfo" src="/test/img/LogoFooter/linkedinW.png">
+                <textarea id="Linkedin" target="_blank" class="footerp"></textarea>
+                <textarea id="LinkedinURL"></textarea>
             </div>
-            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/test/img/LogoFooter/logoPosW.png">
+                <textarea id="Local" target="_blank" class="footerp"></textarea>
+                <textarea id="LocalURL"></textarea>
+            </div>
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/fr/MentionsLegales.html">Mentions légales</a> </p>
         </footer>
 </body>
 
