--- a/test/fr/formFR.html
+++ b/test/fr/formFR.html
@@ -112,7 +112,7 @@
 
     <div id="nousContacter">
         <div id="contact">
-            <form id="formContact" action="/PHP/test_send.php" method="post" autocomplete="on">
+            <form id="formContact" action="/PHP_send.php" method="post" autocomplete="on">
                 <fieldset class="formulaire" form="formContact">
                     <legend id="titreForm">Nous contacter</legend>
                     <p><input class="champSaisi" name="nom" type="text" placeholder="Nom :"></p>
