--- a/test/fr/serviceFR/modifservice5.html
+++ b/test/fr/serviceFR/modifservice5.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="/test/fr/cssFR/service.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script  src="/test/fr/jsFR/modifservice1FR.js"></script>
+    <script  src="/fr/jsFR/modifservice1FR.js"></script>
 
 </head>
 
 <body>
-    <form method="post" action="modifserviceFR.php">
+    <form method="post" action="/PHP/modifserviceFR.php">
     <header>
 
         <!-- La bar navigation -->
@@ -27,7 +27,7 @@
 
 
         
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/fr/accueilFR.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
                 <button>Confirmer les changements</button>
                 <textarea name="serv">5</textarea>
                 <a href="/servithenFR/htmlFR/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
@@ -187,27 +187,27 @@
             </div>
 
             <div class="foter">
-                <img class="logoinfo" src="/test/img/LogoFooter/logoTelW.png">
-                <textarea id="Telephone" class="footerp"></textarea>
-                <textarea id="TelephoneURL"></textarea>
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <textarea name="Telephone" id="Telephone"></textarea>
+                <textarea name="TelephoneURL" id="TelephoneURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/test/img/LogoFooter/logoMailW.png">
-                <textarea id="Mail" class="footerp"></textarea>
-                <textarea id="MailURL"></textarea>
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <textarea name="Mail" id="Mail"></textarea>
+                <textarea name="MailURL" id="MailURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/test/img/LogoFooter/linkedinW.png">
-                <textarea id="Linkedin" target="_blank" class="footerp"></textarea>
-                <textarea id="LinkedinURL"></textarea>
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+                <textarea name="Linkedin" id="Linkedin"></textarea>
+                <textarea name="LinkedinURL" id="LinkedinURL"></textarea>
             </div>
             <br>
             <div class="foter">
-                <img class="logoinfo" src="/test/img/LogoFooter/logoPosW.png">
-                <textarea id="Local" target="_blank" class="footerp"></textarea>
-                <textarea id="LocalURL"></textarea>
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <textarea name="Local" id="Local"></textarea>
+                <textarea name="LocalURL" id="LocalURL"></textarea>
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/fr/MentionsLegales.html">Mentions légales</a> </p>
         </footer>
