--- a/test/fr/ElectrofiltresHumidesSecsFR.html
+++ b/test/fr/ElectrofiltresHumidesSecsFR.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/test/fr/jsFR/ElectroFR.js"></script>
+    <script type="text/javascript" src="/fr/jsFR/ElectroFR.js"></script>
 
 </head>
 
@@ -26,9 +26,9 @@
 
 
 
-                <a href="/test/fr/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/fr/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-                <a href="/test/fr/ProduitFR.html/ElectrofiltresHumidesSecsFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+                <a href="/fr/ProduitFR.html/ElectrofiltresHumidesSecsFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
                 <a href="/servithenEN/htmlEN/ProduitEN.html/ElectrofiltresHumidesSecsEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
@@ -36,7 +36,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -45,8 +45,8 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/appli.html">MyPartner</a>
-                        <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                        <a href="/fr/appli.html">MyPartner</a>
+                        <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                     </div>
                 </div>
 
@@ -54,11 +54,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/test/fr/serviceFr/service1.html">Audits et Expertises d’installations</a>
-                        <a href="/test/fr/test/fr/serviceFr/service2.html">Remise aux normes réglementaire </a>
-                        <a href="/test/fr/test/fr/serviceFr/service3.html">Valorisation énergétique</a>
-                        <a href="/test/fr/test/fr/serviceFr/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="/test/fr/test/fr/serviceFr/service4.html">Maintenance préventive / curative</a>
+                        <a href="/fr/serviceFr/service1.html">Audits et Expertises d’installations</a>
+                        <a href="/fr/serviceFr/service2.html">Remise aux normes réglementaire </a>
+                        <a href="/fr/serviceFr/service3.html">Valorisation énergétique</a>
+                        <a href="/fr/serviceFr/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                        <a href="/fr/serviceFr/service4.html">Maintenance préventive / curative</a>
                     </div>
                 </div>
 
