--- a/test/fr/ProduitFR/InstallationsFR.html
+++ b/test/fr/ProduitFR/InstallationsFR.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/test/fr/jsFR/InstallationsFR.js"></script>
+    <script type="text/javascript" src="/fr/jsFR/InstallationsFR.js"></script>
 
 </head>
 
@@ -26,14 +26,14 @@
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-                <a href="/test/fr/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
+                <a href="/fr/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
     
-                <a href="/test/en/.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+                <a href="/en/.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
     
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -41,8 +41,8 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/appli.html">MyPartner</a>
-                        <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Link 3</a>
+                        <a href="/fr/appli.html">MyPartner</a>
+                        <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Link 3</a>
                     </div>
                 </div>
 
@@ -50,11 +50,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/test/fr/serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
-                    <a href="/test/fr/serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
-                    <a href="/test/fr/serviceFR/modifservice3.html">Valorisation énergétique</a>
-                    <a href="/test/fr/serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="/test/fr/serviceFR/modifservice5.html">Maintenance préventive / curative</a>
+                    <a href="/fr/serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
+                    <a href="/fr/serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
+                    <a href="/fr/serviceFR/modifservice3.html">Valorisation énergétique</a>
+                    <a href="/fr/serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/fr/serviceFR/modifservice5.html">Maintenance préventive / curative</a>
                 </div>
                 </div>
 
@@ -62,14 +62,14 @@
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/ProduitFR/modifToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/test/fr/ProduitFR/modifVenturiFR.html">Venturi</a>
-                        <a href="/test/fr/ProduitFR/modifElectroFR.html">Electrofiltres humides / secs</a>
-                        <a href="/test/fr/ProduitFR/modifFiltresFR.html">Filtres à manches</a>
-                        <a href="/test/fr/ProduitFR/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/test/fr/ProduitFR/modifInstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/test/fr/ProduitFR/modifRecuperationFR.html">Récupération d’énergie</a>
-                        <a href="/test/fr/ProduitFR/modifFournitureFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/fr/ProduitFR/modifToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/fr/ProduitFR/modifVenturiFR.html">Venturi</a>
+                        <a href="/fr/ProduitFR/modifElectroFR.html">Electrofiltres humides / secs</a>
+                        <a href="/fr/ProduitFR/modifFiltresFR.html">Filtres à manches</a>
+                        <a href="/fr/ProduitFR/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/fr/ProduitFR/modifInstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/fr/ProduitFR/modifRecuperationFR.html">Récupération d’énergie</a>
+                        <a href="/fr/ProduitFR/modifFournitureFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
@@ -77,15 +77,15 @@
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/test/fr/modifpresentationFR.html">Notre métier</a>
-                    <a href="/test/fr/modifpourquoiFR.html">Pourquoi Servithen</a>
-                    <a href="/test/fr/modifengagementFR.html">Notre engagement</a>
+                    <a href="/fr/modifpresentationFR.html">Notre métier</a>
+                    <a href="/fr/modifpourquoiFR.html">Pourquoi Servithen</a>
+                    <a href="/fr/modifengagementFR.html">Notre engagement</a>
                 </div>
                 </div>
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/test/fr/modifaccueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/fr/modifaccueilFR.html">ACCUEIL</a>
 
                 </div>
 
