--- a/test/fr/accueilFR.html
+++ b/test/fr/accueilFR.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/test/fr/jsFR/accueilFR.js"></script>
+    <script type="text/javascript" src="/fr/jsFR/accueilFR.js"></script>
 
 
 </head>
@@ -28,17 +28,17 @@
             <div class="navbar">
 
 
-                <a href="/test/fr/accueilFR.html"><img class="logo" src="/test/img/logo.png " alt="logo Servithen"></a>
+                <a href="/fr/accueilFR.html"><img class="logo" src=" /img/logo.png " alt="logo Servithen"></a>
 
-                <a href="/test/fr/accueilFR.html"><img class="langage" src="/test/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+                <a href=" /fr/accueilFR.html"><img class="langage" src=" /img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-                <a href="/test/en/accueilEN.html"><img class="langage" src="/test/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+                <a href=" /en/accueilEN.html"><img class="langage" src=" /img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href=" /fr/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -47,8 +47,8 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/appli.html">MyPartner</a>
-                        <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                        <a href="/fr/appli.html">MyPartner</a>
+                        <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                     </div>
                 </div>
 
@@ -56,11 +56,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
-                        <a href="/test/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
-                        <a href="/test/fr/serviceFR/service3.html">Valorisation énergétique</a>
-                        <a href="/test/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="/test/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
+                        <a href="/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
+                        <a href="/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
+                        <a href="/fr/serviceFR/service3.html">Valorisation énergétique</a>
+                        <a href="/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                        <a href="/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
                     </div>
                 </div>
 
@@ -68,14 +68,14 @@
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/test/fr/ProduitFR/VenturiFR.html">Venturi</a>
-                        <a href="/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                        <a href="/test/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/test/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/test/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/test/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                        <a href="/test/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/fr/ProduitFR/VenturiFR.html">Venturi</a>
+                        <a href="/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                        <a href="/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
+                        <a href="/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                        <a href="/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
@@ -83,15 +83,15 @@
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/test/fr/presentationFR.html">Notre métier</a>
-                        <a href="/test/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
-                        <a href="/test/fr/notreEngagementFR.html">Notre engagement</a>
+                        <a href="/fr/presentationFR.html">Notre métier</a>
+                        <a href="/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                        <a href="/fr/notreEngagementFR.html">Notre engagement</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/test/fr/accueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/fr/accueilFR.html">ACCUEIL</a>
 
                 </div>
 
@@ -318,6 +318,6 @@
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
         </footer>
 </body>
-<script src="/test/fr/jsFR/scriptFR.js"></script>
+<script src="/fr/jsFR/scriptFR.js"></script>
 
 </html>
