--- a/test/fr/appli.html
+++ b/test/fr/appli.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <link rel="stylesheet" href="../cssFR/appli.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/test/fr/jsFR/confianceFR.js"></script>
+    <script src="/fr/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -22,17 +22,17 @@
         <div class="navbar">
 
 
-            <a href="/test/fr/accueilFR.html"><img class="logo" src="/test/fr/img/logo.png " alt="logo Servithen"></a>
+            <a href="/fr/accueilFR.html"><img class="logo" src="/fr/img/logo.png " alt="logo Servithen"></a>
 
-            <a href="/test/fr/accueilFR.html"><img class="langage" src="/test/fr/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+            <a href="/fr/accueilFR.html"><img class="langage" src="/fr/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/test/fr/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/fr/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/test/fr/formFR.html">NOUS CONTACTER</a>
+                <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
 
             </div>
 
@@ -41,8 +41,8 @@
                 <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/test/fr/appli.html">MyPartner</a>
-                    <a href="/test/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                    <a href="/fr/appli.html">MyPartner</a>
+                    <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -50,11 +50,11 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/test/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
-                    <a href="/test/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
-                    <a href="/test/fr/serviceFR/service3.html">Valorisation énergétique</a>
-                    <a href="/test/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="/test/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
+                    <a href="/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="/fr/serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
                 </div>
             </div>
 
@@ -62,14 +62,14 @@
                 <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/test/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
-                    <a href="/test/fr/ProduitFR/VenturiFR.html">Venturi</a>
-                    <a href="/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                    <a href="/test/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
-                    <a href="/test/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                    <a href="/test/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
-                    <a href="/test/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                    <a href="/test/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                    <a href="/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/fr/ProduitFR/VenturiFR.html">Venturi</a>
+                    <a href="/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
@@ -77,15 +77,15 @@
                 <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/test/fr/presentationFR.html">Notre métier</a>
-                    <a href="/test/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
-                    <a href="/test/fr/notreEngagementFR.html">Notre engagement</a>
+                    <a href="/fr/presentationFR.html">Notre métier</a>
+                    <a href="/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/fr/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/test/fr/accueilFR.html">ACCUEIL</a>
+                <a class="MenuBtn" href="/fr/accueilFR.html">ACCUEIL</a>
 
             </div>
 
