--- a/test/fr/serviceFR/service2.html
+++ b/test/fr/serviceFR/service2.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="image/x-icon">
-    <link rel="stylesheet" href="/test/fr/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="/test/fr/cssFR/service.css">
+    <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/fr/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script  src="/test/fr/jsFR/service2FR.js"></script>
+    <script  src="/fr/jsFR/service2FR.js"></script>
 
 </head>
 
